<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="25dp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:src="@drawable/example_rep1"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/rep_deets_name"
        android:text="@string/rep1_deets_name"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <TextView
        android:text="Party"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        />
    <TextView
        android:id="@+id/rep_deets_party"
        android:text="@string/rep1_deets_party"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        />

    <TextView
        android:text="Term Till"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        />
    <TextView
        android:id="@+id/rep_deets_term"
        android:text="@string/rep1_deets_term"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        />

    <TextView
        android:text="Name of Committee"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        />
    <TextView
        android:id="@+id/rep_deets_committee"
        android:text="@string/rep1_deets_committee"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        />

    <TextView
        android:text="Sponsored Bills"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        />
    <TextView
        android:id="@+id/rep_deets_bills"
        android:text="@string/rep1_deets_bills"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        />

</LinearLayout>
</ScrollView>